<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">家政学院</string>

    <string name="Housekeeping">家政帮</string>
    <string name="expert">名医专家</string>
    <string name="product">健康产品</string>
    <string name="personal">个人中心</string>

    <string name="personalTip1">我的消息</string>
    <string name="personalTip2">组长申请</string>
    <string name="personalTip3">我的订单</string>
    <string name="personalTip4">我的账户</string>
    <string name="personalTip5">设置</string>

    <string name="add">add</string>

    <string name="headerScrollingBehavior">com.zty.therapist.widget.coordinator.HeaderScrollingBehavior</string>
    <string name="headerFloatBehavior">com.zty.therapist.widget.coordinator.HeaderFloatBehavior</string>

    <string name="productPrise"></string>

    <string name="integralCount">合计：%1$s健康币</string>

    <string name="memberTip1">成员</string>
    <string name="memberTip2">替班</string>
    <string name="memberTip3">住所分享</string>
    <string name="memberTip4">聊天</string>

    <string name="monitorTip1">组长列表</string>
    <string name="monitorTip2">医生对接</string>
    <string name="monitorTip3">通知公告</string>
    <string name="monitorTip4">聊天</string>

    <string name="administratorTip1">班长列表</string>
    <string name="administratorTip2">医生订单</string>
    <string name="administratorTip3">班组分配</string>
    <string name="administratorTip4">通知公告</string>

    <string name="ability1">工作能力:</string>
    <string name="ability2">组织能力:</string>
    <string name="ability3">沟通能力:</string>
    <string name="ability4">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;情:</string>
    <string name="ability5">形&#160;&#160;&#160;&#160;&#160;&#160;&#160;象:</string>


</resources>
