<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/ability1" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_shape"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerAbility1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"></android.support.v7.widget.AppCompatSpinner>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/ability2" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_shape"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerAbility2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"></android.support.v7.widget.AppCompatSpinner>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/ability3" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_shape"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerAbility3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"></android.support.v7.widget.AppCompatSpinner>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/ability4" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_shape"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerAbility4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"></android.support.v7.widget.AppCompatSpinner>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/ability5" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/edit_shape"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerAbility5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"></android.support.v7.widget.AppCompatSpinner>
        </FrameLayout>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="32dp"></View>

</LinearLayout>