<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <com.zty.therapist.widget.CircleImageView
                android:id="@+id/imgMemberDetail"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentLeft="true"
                android:scaleType="centerCrop"
                app:border_color="#E9CDA7"
                app:border_width="1dp"/>

            <TextView
                android:id="@+id/textMemberLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="当前位置"
                android:gravity="center_vertical"
                android:drawablePadding="6dp"
                android:textSize="13sp"
                android:layout_marginRight="8dp"
                android:textColor="@color/colorMore"
                android:drawableRight="@mipmap/ic_location"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/view_user_message" />

            <TextView
                android:id="@+id/btnMemberHandle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:background="@mipmap/ic_btn_member_handle"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:text="取消组长"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDivider"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@mipmap/ic_red_tip"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:text="评 价"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/ability1" />

            <TextView
                android:id="@+id/textAbility1"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/ability2" />

            <TextView
                android:id="@+id/textAbility2"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/ability3" />

            <TextView
                android:id="@+id/textAbility3"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/ability4" />

            <TextView
                android:id="@+id/textAbility4"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/ability5" />

            <TextView
                android:id="@+id/textAbility5"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="8dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/btnMemberEvaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_margin="8dp"
            android:background="@mipmap/ic_btn_member_handle"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="评 价"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

</ScrollView>